--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         <div>
             <input name='dateTask' type="datetime-local">
         </div>
-        <button type="submit">Добавить</button>
+
+        <button id="butt" type="submit">Добавить задачу</button>
 
     </form>
     <script src="js/main.js"></script>
