--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 </head>
 
 <body>
-
-    <form action="#" method="post" name="todoapp" class="todoapp-form ">
+    <header>
+    <button class="btn btn-light" id="next-page" type="button"><a href="tasks.html">Страница задач</a></button>
+</header>
+    <form action="#" method="post" name="todoapp" class="todoapp-form">
         <div class="col-md-10">
             <div>
                 <label for="nametask">Название задачи</label>
