--- a/tasks.html
+++ b/tasks.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/tasks.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     <title>TASKS</title>
 </head>
 <body>
-<script src="js/main.js"></script>
+<header>
+    <button class="btn btn-light" id="last-page" type="button"><a href="index.html">Страница создания задач</a></button>
+</header>
+<h2 class="title">Список задач</h2>
+<form action="#" method="post" name="todoapp" class="todoapp-tasks"></form>
+
+    <!-- <button  class="btn btn-warning" id="butt" type="submit">Удалить выбранные задачи</button> -->
+</form>
+
+<script src="js/tasks.js"></script>
+
 </body>
 </html>
