--- a/tasks.html
+++ b/tasks.html
@@ -16,10 +16,11 @@
     <button class="btn btn-light" id="last-page" type="button"><a href="index.html">Страница создания задач</a></button>
 </header>
 <h2 class="title">Список задач</h2>
-<form action="#" method="post" name="todoapp" class="todoapp-tasks"></form>
 
-    <!-- <button  class="btn btn-warning" id="butt" type="submit">Удалить выбранные задачи</button> -->
-</form>
+<ul id='list'>
+    
+</ul>
+
 
 <script src="js/tasks.js"></script>
 
