--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <button class="btn btn-light" id="next-page" type="button"><a href="tasks.html">Страница задач</a></button>
 </header>
     <form action="#" method="post" name="todoapp" class="todoapp-form">
+        <span id="massage"></span>
         <div class="col-md-10">
             <div>
                 <label for="nametask">Название задачи</label>
