--- a/tasks.html
+++ b/tasks.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/tasks.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+        <link rel="stylesheet" href="./css/tasks.css">
     <title>TASKS</title>
 </head>
 <body>
@@ -17,12 +17,14 @@
 </header>
 <h2 class="title">Список задач</h2>
 
-<ul id='list'>
+<ul id='list' class="tasks">
     
 </ul>
 
+<button id="deleteTasks" class="deleteTasks btn">Удалить задачи</button>
 
-<script src="js/tasks.js"></script>
+
+<script src="./js/tasks.js"></script>
 
 </body>
 </html>
