--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <header>
     <button class="btn btn-light" id="next-page" type="button"><a href="tasks.html">Страница задач</a></button>
 </header>
+<span id="message"></span>
     <form action="#" method="post" name="todoapp" class="todoapp-form">
-        <span id="massage"></span>
         <div class="col-md-10">
             <div>
                 <label for="nametask">Название задачи</label>
