--- a/index.html
+++ b/index.html
@@ -5,24 +5,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/index.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="./css/index.css">
     <title>TO-DO APP</title>
 </head>
 
 <body>
     <header>
-    <button class="btn btn-light" id="next-page" type="button"><a href="tasks.html">Страница задач</a></button>
+    <!-- <button class="btn btn-light" id="next-page" type="button">
+        <a href="tasks.html">Страница задач</a>
+    </button> -->
+    <a class="btn btn-light next-page" id="next-page" href="tasks.html">Страница задач</a>
 </header>
 <span id="message"></span>
     <form action="#" method="post" name="todoapp" class="todoapp-form">
         <div class="col-md-10">
             <div>
                 <label for="nametask">Название задачи</label>
-                <input class="form-control" name="nameTask" id="nametask" type="text" placeholder="Введите название задачи">
+                <input class="form-control" name="nameTask" id="nametask" type="text" placeholder="Введите название задачи" required>
 
             </div>
 
@@ -33,7 +35,7 @@
 
             <div>
                 <label for="dateTask">Дата выполнения</label>
-                <input class="form-control" name='dateTask' type="datetime-local">
+                <input class="form-control" name='dateTask' type="datetime-local" required>
             </div>
 
             <div>
